# cc2538-hal

./: Cargo.toml  flash.sh
.cargo/: config.toml
src/: adc.rs  crypto.rs  delay.rs  dma.rs  gpio.rs  i2c.rs  ioc.rs  lib.rs  rng.rs  serial.rs  smwd.rs  spi.rs  sys_ctrl.rs  time.rs  timers.rs
src/crypto/: bignum.rs  ecc.rs  mod.rs  sha2.rs
src/crypto/aes_engine/: ccm.rs  ctr.rs  keys.rs  mod.rs
src/radio/: mod.rs
