[package]
name = "cc2538-hal"
version = "0.1.0"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
edition = "2018"

[dependencies]
cc2538-pac = { version = "0.1.0", features = ["rt"] }
cortex-m = { version = "0.7.4", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
alloc-cortex-m = "0.4.1"
circular-queue = "0.2.6"
embedded-hal = "=1.0.0-alpha.5"
nb = "1.0.0"
paste = "1.0.4"
