[package]
name = "cc2538-hal"
version = "0.1.1"
keywords = ["no-std", "arm", "cortex-m", "cc2538"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Hardware abstraction layer for the CC2538 System-On-Chip"

[package.metadata.docs.rs]
targets = ["thumbv7m-none-eabi"]

[dependencies]
cc2538-pac = { version = "0.1.0", features = ["rt"] }
cortex-m = { version = "0.7.4", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
alloc-cortex-m = "0.4.1"
circular-queue = "0.2.6"
embedded-hal = "=1.0.0-alpha.5"
nb = "1.0.0"
paste = "1.0.4"
